# _TG_BOT_REPO_

./: README.md
Tg-channels/project1/project/: .env  Cargo.toml
Tg-channels/project1/project/src/: main.rs
Tg-channels/project1/project/state/: last_seen.json  subscribers.json
